<resources>
    <string name="app_name">Mic And Master</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_record">Record Activity</string>
    <string name="new_recording">New Recording</string>
    <string name="load_existing">Load Existing Project</string>
    <string name="import_audio">Import Audio</string>
    <string name="record">New Recording</string>
    <string name="save">Save</string>
    <string name="play">Play</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="Load_button">Load Project</string>
    <string name="delete_button">Delete Project</string>
</resources>
